[tool.poetry]
name = "dz-web-7"
version = "0.1.0"
description = ""
authors = ["sbdiv <143803108+sbdiv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
